--- a/busqueda_avanzada.html
+++ b/busqueda_avanzada.html
@@ -21,10 +21,11 @@
                 </a>
                 <div class="user ">
                 </div>
+            </div>    
         </nav>
         <h1 class="text-center bold text-xxl mt-4"> <strong>Explora lugares cercanos</strong></h1>
 
-        <div class="container">
+            <div class="container">
                 <div class="row">
                     <div class="col-md-12">
                         <div class="input-group">
@@ -37,27 +38,11 @@
                 </div>
             </div>
 
-        <div class="row mt-4">
-            <div class="col-sm-12">
-                <table class="table table-bordered" id="dataTable">
-                    <thead class="table-dark">
-                        <tr>
-                            <th>#</th>
-                            <th>Producto</th>
-                            <th>Cantidad</th>
-                            <th>Precio de Venta</th>
-                            <th>Categoría</th>
-                            <th>Acciones</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <!-- Mostrar Datos de busqueda.... -->
-                    </tbody>
-                </table>
-            </div>
-        </div>
+        <div class="row mt-4" id="cardContainer">
+
+        </div>            
     </div>
-    <script src="../js/script.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
