--- a/busqueda_avanzada.html
+++ b/busqueda_avanzada.html
@@ -29,7 +29,7 @@
                 <div class="row">
                     <div class="col-md-12">
                         <div class="input-group">
-                            <input type="text" class="form-control" placeholder="Search" id="buscar" name="buscar" name="q">
+                            <input type="text" class="form-control" placeholder="Search" id="search" name="buscar" name="q">
                             <div class="input-group-append m-2">
                                 <button class="btn btn-outline-success" type="button">Buscar</button>
                             </div>
